# plonky2-recursion-experiment

./: Cargo.toml  README.md
src/: example_innercircuit.rs  lib.rs  sig_gadget.rs  tree_recursion.rs
